// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Demo5 reducer should not update state when an unknown action is dispatched 1`] = `
{
  "email": "",
  "formErrors": [],
  "hasError": false,
  "hasResult": false,
  "location": null,
  "mobilenumber": "",
  "optionEmail": null,
  "optionPhone": null,
  "report": "",
}
`;

exports[`Demo5 reducer should update when action setError is dispatched 1`] = `
{
  "email": "",
  "formErrors": [],
  "hasError": true,
  "hasResult": false,
  "location": null,
  "mobilenumber": "",
  "optionEmail": null,
  "optionPhone": null,
  "report": "",
}
`;

exports[`Demo5 reducer should update when action setLocation is dispatched 1`] = `
{
  "email": "",
  "formErrors": [],
  "hasError": false,
  "hasResult": false,
  "location": {
    "displayName": "Test",
    "id": "testId",
  },
  "mobilenumber": "",
  "optionEmail": null,
  "optionPhone": null,
  "report": "",
}
`;

exports[`Demo5 reducer should update when action setResult is dispatched 1`] = `
{
  "email": "test@amsterdam.nl",
  "formErrors": [],
  "hasError": false,
  "hasResult": true,
  "location": null,
  "mobilenumber": "0612345678",
  "optionEmail": null,
  "optionPhone": null,
  "report": "",
}
`;

exports[`Demo5 reducer should update when action validateForm is dispatched 1`] = `
{
  "email": "",
  "formErrors": [],
  "hasError": false,
  "hasResult": false,
  "location": {
    "displayName": "Test",
    "id": "testId",
  },
  "mobilenumber": "",
  "optionEmail": true,
  "optionPhone": true,
  "report": "Test melding",
}
`;
